--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,6 +23,12 @@
 .sidenav-content {
   display: flex;
   flex-direction: column;
+
+  .side-content {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
 }
 
 .sidenav-container {
@@ -48,3 +54,22 @@ mat-sidenav {
   width: 241px;
 }
 
+.first_content {
+  flex-grow: 1;
+  display: flex;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  font-size: 44px;
+  font-family: 'Microsoft JhengHei';
+  font-weight: bold;
+  color: cadetblue;
+}
+
+.fab-button-content {
+  padding: 6px 6px;
+  button {
+    background-color: cornflowerblue;
+  }
+}
